# drugstore-project

./: .gitignore  AGENTS.md  README.md  TESTING-PLAN.md  docker-compose.dev.yml  docker-compose.test.yml  drogueria-schema-v2.dbml  main.md  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.opencode/: README.md
.opencode/agents/: backend.md  frontend-backoffice.md  frontend-pos.md  pos-local.md  pos-testing.md  testing.md
apps/fiscal-engine/: .env.example  package.json  tsconfig.json
apps/fiscal-engine/src/: app.module.ts  main.ts
apps/fiscal-engine/src/config/: env.schema.ts
apps/pos-desktop/: .env.example  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.d.ts.map  vite.config.ts  vitest.config.ts  vitest.integration.config.ts  vitest.setup.ts
apps/pos-desktop/e2e/: admin-flow.spec.ts  inventory-flow.spec.ts  offline-flow.spec.ts  returns-flow.spec.ts  sales-flow.spec.ts  setup.ts
apps/pos-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pos-desktop/src-tauri/capabilities/: default.json
apps/pos-desktop/src-tauri/src/: backup.rs  hardware_fingerprint.rs  hub_election.rs  lib.rs  local_sync_client.rs  local_sync_server.rs  main.rs  mdns_discovery.rs  printer_discovery.rs
apps/pos-desktop/src-tauri/src/commands/: backup.rs  local_sync.rs  mod.rs  printer_discovery.rs
apps/pos-desktop/src/common/: domain-error.test.ts  domain-error.ts  download.test.ts  download.ts  format-age.test.ts  format-age.ts  is-online.test.ts  is-online.ts  sync-metadata.test.ts  sync-metadata.ts  time-format.test.ts  time-format.ts
apps/pos-desktop/src/config/: fiscal.test.ts  fiscal.ts
apps/pos-desktop/src/help-content/: index.md  index.ts  shortcuts.md
apps/pos-desktop/src/infrastructure/: README.md  auth-token-provider.test.ts  auth-token-provider.ts  catalog-service-factory.test.ts  catalog-service-factory.ts  config.test.ts  config.ts  http-client.ts  (+7 more)
apps/server/: .env.example  jest.config.ts  jest.e2e.config.ts  package.json  tsconfig.e2e.json  tsconfig.json  tsconfig.spec.json
apps/server/prisma/: prisma.config.ts  schema.prisma  seed.ts
apps/server/seed/: main.ts
apps/server/src/: app.module.ts  main.ts
apps/server/test/: account-lockout.e2e-spec.ts  auth.e2e-spec.ts  cash-shift.e2e-spec.ts  catalog.e2e-spec.ts  client-return.e2e-spec.ts  fifo-stock.e2e-spec.ts  habeas-data.e2e-spec.ts  health.e2e-spec.ts  sale-lifecycle.e2e-spec.ts  set-env.ts
docs/: Anexo-Tecnico-Factura-Electronica-de-Venta-vr-1-9.md  DEV.md  MIGRACION-LOCAL-FIRST.md  REFACTORING-PLAN-POS-DESKTOP.md  TESTING-PLAN-POS-DESKTOP.md  TESTING-PLAN.md  dian-anexo-v1.9-referencia.md  update-signing-key-rotation.md
scripts/: seed-db.ps1  setup-dev.ps1  test-e2e.ps1
(+1264 files in other folders)
