[package]
name = "pos-desktop"
version = "0.1.0"
description = "Offline-first pharmacy POS desktop terminal"
authors = ["Development Team"]
license = "Proprietary"
repository = ""
default-run = "pos-desktop"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
