[package]
name = "pos-desktop"
version = "0.1.0"
description = "Offline-first pharmacy POS desktop terminal"
authors = ["Development Team"]
license = "Proprietary"
repository = ""
default-run = "pos-desktop"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
tar = "0.4"
flate2 = "1"
aes-gcm = "0.10"
argon2 = "0.5"
thiserror = "1"
walkdir = "2"
tokio = { version = "1", features = ["fs", "io-util"] }
log = "0.4"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
